--- a/sdk/dotnet/DaggerSDKCodeGen/DaggerSDKCodeGen.csproj
+++ b/sdk/dotnet/DaggerSDKCodeGen/DaggerSDKCodeGen.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DaggerSDK\DaggerSDK.csproj" />
+    <ProjectReference Include="..\EngineConnection\EngineConnection.csproj" />
   </ItemGroup>
 
 </Project>
