Spawn Dagger executable from SDK Generator
A portion of bin.ts is translated for this purpose; the download part will be separated to static functions in the primary SDK's assembly. The abstractions can be improved (i.e. existing-session-based connection should also be an implementation of IEngineConnection), but until it's 100% translated and tested, I'm keeping things as 1:1 with the TypeScript as practical.

--- a/sdk/dotnet/Errors/Errors.csproj
+++ b/sdk/dotnet/Errors/Errors.csproj
@@ -4,17 +4,12 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>DaggerSDK.Errors</AssemblyName>
         <RootNamespace>DaggerSDK</RootNamespace>
-        <AssemblyName>DaggerSDK.EngineConnection</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="GraphQL.Client" Version="6.0.2" />
-      <PackageReference Include="GraphQL.Client.Serializer.SystemTextJson" Version="6.0.2" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Errors\Errors.csproj" />
     </ItemGroup>
 
 </Project>
