--- a/sdk/dotnet/DaggerSDKCodeGen/DaggerSDKCodeGen.csproj
+++ b/sdk/dotnet/DaggerSDKCodeGen/DaggerSDKCodeGen.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>DaggerSDK.CodeGen</AssemblyName>
+    <RootNamespace>DaggerSDK.CodeGen</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
