--- a/sdk/dotnet/DaggerSDK/DaggerSDK.csproj
+++ b/sdk/dotnet/DaggerSDK/DaggerSDK.csproj
@@ -4,6 +4,20 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>12</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Downloader" Version="3.1.0-beta" />
+    <PackageReference Include="MicroKnights.IO.SplitStream" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EngineConnection\EngineConnection.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Common\SyntaxSugar.cs" />
+  </ItemGroup>
 
 </Project>
