--- a/sdk/dotnet/DaggerSDKCodeGen/DaggerSDKCodeGen.csproj
+++ b/sdk/dotnet/DaggerSDKCodeGen/DaggerSDKCodeGen.csproj
@@ -5,12 +5,17 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>12</LangVersion>
     <AssemblyName>DaggerSDK.CodeGen</AssemblyName>
-    <RootNamespace>DaggerSDK.CodeGen</RootNamespace>
+    <RootNamespace>DaggerSDK</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EngineConnection\EngineConnection.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.0-2.final" />
   </ItemGroup>
 
 </Project>
