--- a/sdk/dotnet/Tests/IntegrationTests/IntegrationTests.csproj
+++ b/sdk/dotnet/Tests/IntegrationTests/IntegrationTests.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <LangVersion>12</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
