--- a/sdk/dotnet/Tests/IntegrationTests/IntegrationTests.csproj
+++ b/sdk/dotnet/Tests/IntegrationTests/IntegrationTests.csproj
@@ -8,6 +8,10 @@
     <IsPackable>false</IsPackable>
 
     <LangVersion>12</LangVersion>
+
+    <AssemblyName>Dagger.IntegrationTests</AssemblyName>
+
+    <RootNamespace>Dagger.IntegrationTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
