--- a/sdk/dotnet/DaggerSDK/DaggerSDK.csproj
+++ b/sdk/dotnet/DaggerSDK/DaggerSDK.csproj
@@ -5,6 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>12</LangVersion>
+    <AssemblyName>Dagger.SDK</AssemblyName>
+    <RootNamespace>Dagger</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
