--- a/sdk/dotnet/EngineConnection/EngineConnection.csproj
+++ b/sdk/dotnet/EngineConnection/EngineConnection.csproj
@@ -4,8 +4,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>DaggerSDK</RootNamespace>
-        <AssemblyName>DaggerSDK.EngineConnection</AssemblyName>
+        <RootNamespace>Dagger</RootNamespace>
+        <AssemblyName>Dagger.EngineConnection</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
