--- a/sdk/dotnet/DaggerSDK/DaggerSDK.csproj
+++ b/sdk/dotnet/DaggerSDK/DaggerSDK.csproj
@@ -8,7 +8,7 @@
     <AssemblyName>Dagger.SDK</AssemblyName>
     <RootNamespace>Dagger</RootNamespace>
     <PackageId>MaxPixel.Dagger.SDK</PackageId>
-    <Version>0.0.3</Version>
+    <Version>0.0.4</Version>
     <Title>Dagger SDK</Title>
     <Authors>Max Pixel, Andrea Luzzardi, Gerhard Lazu, Nabeel Sulieman, Helder Correia, Justin Chadwell, Erik Sipsma, Tom Chauveau, Alex Suraci, Vikram Vaswani, Guillaume de Rouville, Jffarge, Michael Tyson, Benjamin Strasser, David Flanagan</Authors>
     <Description>Alpha preview of a C# Dagger SDK</Description>
@@ -21,15 +21,9 @@
 
   <ItemGroup>
     <PackageReference Include="Downloader" Version="3.1.0-beta" />
+    <PackageReference Include="GraphQL.Client" Version="6.0.2" />
+    <PackageReference Include="GraphQL.Client.Serializer.SystemTextJson" Version="6.0.2" />
     <PackageReference Include="MicroKnights.IO.SplitStream" Version="1.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\EngineConnection\EngineConnection.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="Common\SyntaxSugar.cs" />
   </ItemGroup>
 
   <ItemGroup>
