--- a/sdk/dotnet/DaggerSDKCodeGen/DaggerSDKCodeGen.csproj
+++ b/sdk/dotnet/DaggerSDKCodeGen/DaggerSDKCodeGen.csproj
@@ -11,10 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EngineConnection\EngineConnection.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="MaxPixel.Dagger.SDK" Version="0.0.4" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.0-2.final" />
   </ItemGroup>
 
