Omit localization from codegen build.

--- a/sdk/dotnet/DaggerSDKCodeGen/DaggerSDKCodeGen.csproj
+++ b/sdk/dotnet/DaggerSDKCodeGen/DaggerSDKCodeGen.csproj
@@ -8,6 +8,7 @@
     <LangVersion>12</LangVersion>
     <AssemblyName>Dagger.CodeGen</AssemblyName>
     <RootNamespace>Dagger</RootNamespace>
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
   </PropertyGroup>
 
   <ItemGroup>
