--- a/sdk/dotnet/CodeGenerator/CodeGenerator.csproj
+++ b/sdk/dotnet/CodeGenerator/CodeGenerator.csproj
@@ -6,10 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>12</LangVersion>
-    <AssemblyName>Dagger.CodeGen</AssemblyName>
+    <AssemblyName>Dagger.CodeGenerator</AssemblyName>
     <RootNamespace>Dagger</RootNamespace>
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
