--- a/sdk/dotnet/Thunk/Thunk.csproj
+++ b/sdk/dotnet/Thunk/Thunk.csproj
@@ -10,8 +10,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Reference Include="Dagger.SDK">
-			<HintPath>Libraries/Dagger.SDK.dll</HintPath>
+		<Reference Include="Dagger.Client">
+			<HintPath>Libraries/Dagger.Client.dll</HintPath>
 		</Reference>
 		<Compile Remove="Libraries\**" />
 		<EmbeddedResource Remove="Libraries\**" />
