--- a/sdk/dotnet/Thunk/Thunk.csproj
+++ b/sdk/dotnet/Thunk/Thunk.csproj
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net8.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
+		<ImplicitUsings>false</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<AssemblyName>Dagger.Thunk</AssemblyName>
 		<RootNamespace>Dagger.Thunk</RootNamespace>
