--- a/sdk/dotnet/ModuleTest/ModuleTest.csproj
+++ b/sdk/dotnet/ModuleTest/ModuleTest.csproj
@@ -6,6 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="Dagger.Generated">
+            <HintPath>Libraries/Dagger.Generated.dll</HintPath>
+        </Reference>
         <Reference Include="Dagger.Client">
             <HintPath>Libraries/Dagger.Client.dll</HintPath>
         </Reference>
