--- a/sdk/dotnet/ModuleTest/ModuleTest.csproj
+++ b/sdk/dotnet/ModuleTest/ModuleTest.csproj
@@ -9,9 +9,9 @@
         <Reference Include="Dagger.Generated">
             <HintPath>Libraries/Dagger.Generated.dll</HintPath>
         </Reference>
-        <Reference Include="Dagger.Client">
-            <HintPath>Libraries/Dagger.Client.dll</HintPath>
-        </Reference>
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="MaxPixel.Dagger.Client" Version="0.0.1" />
     </ItemGroup>
 
 </Project>
