--- a/sdk/dotnet/Pipelines/Pipelines.csproj
+++ b/sdk/dotnet/Pipelines/Pipelines.csproj
@@ -1,16 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+        <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AssemblyName>Dagger.Pipelines</AssemblyName>
-        <RootNamespace>DaggerDotNetSDKPipelines</RootNamespace>
+        <RootNamespace>Dagger.Pipelines</RootNamespace>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>1591,1573</NoWarn>
     </PropertyGroup>
-
     <ItemGroup>
-      <ProjectReference Include="..\DaggerSDK\DaggerSDK.csproj" />
+        <Reference Include="Dagger.Generated">
+            <HintPath>Libraries/Dagger.Generated.dll</HintPath>
+        </Reference>
+      <PackageReference Include="MaxPixel.Dagger.Client" Version="0.0.1" />
     </ItemGroup>
-
 </Project>
