--- a/sdk/dotnet/Primer/Primer.csproj
+++ b/sdk/dotnet/Primer/Primer.csproj
@@ -1,16 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
-        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <AssemblyName>Dagger.Primer</AssemblyName>
-        <RootNamespace>Dagger.Primer</RootNamespace>
-    </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net8.0</TargetFramework>
+		<RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<AssemblyName>Dagger.Primer</AssemblyName>
+		<RootNamespace>Dagger.Primer</RootNamespace>
+		<InvariantGlobalization>true</InvariantGlobalization>
+		<!-- Being the component that implements downloading NuGet packages, Primer must include all of its own
+			dependencies, as nothing is available to download them for it. -->
+		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+		<IsPackable>false</IsPackable>
+		<AssemblyVersion>0.0.2</AssemblyVersion>
+		<Deterministic>true</Deterministic>
+	</PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="9.0.0" />
-      <PackageReference Include="NuGet.Protocol" Version="6.12.1" />
-    </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="9.0.0" />
+		<PackageReference Include="NuGet.Protocol" Version="6.12.1" />
+	</ItemGroup>
 </Project>
