--- a/sdk/dotnet/Thunk/Thunk.csproj
+++ b/sdk/dotnet/Thunk/Thunk.csproj
@@ -7,7 +7,10 @@
 		<Nullable>enable</Nullable>
 		<AssemblyName>Dagger.Thunk</AssemblyName>
 		<RootNamespace>Dagger.Thunk</RootNamespace>
+		<InvariantGlobalization>true</InvariantGlobalization>
 		<IsPackable>false</IsPackable>
+		<AssemblyVersion>0.0.1</AssemblyVersion>
+		<Deterministic>true</Deterministic>
 	</PropertyGroup>
 
 	<ItemGroup>
